# pong

./: .gitignore  CMakeLists.txt  CMakeSettings.json  _clang-format  main.cpp  mainwindow.cpp  mainwindow.h  qtpong.cpp  qtpong.h
cmake/: windeployqt.cmake
pong/: ball.cpp  ball.h  ball.ipp  collider.h  drawer.cpp  drawer.h  drawer.ipp  geometry.h  input.h  paddle.cpp  paddle.h  paddle.ipp  pong.cpp  pong.h  pong.ipp  renderable.h  stage.h
pong/geometry/: constants.h  line.h  matrix.h  polygon.h  quadrilateral.h  rectangle.h  triangle.h  vector.h
